force-app/main/default/objects/Avaliacao_de_Experiencia__c/Avaliacao_de_Experiencia__c.object-meta.xml
<CustomObject>
    <description>Objeto Criado para efetuar a avaliação do periodo de experiencia do colaborador</description>
    <label>Avaliação de Experiencia</label>
    <nameField>
        <displayFormat>AF-{0000}</displayFormat>
        <label>Avaliação de Experiência</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avaliações de Experiencia</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>