force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/Aprovador__c.field-meta.xml
<CustomField>
    <fullName>Aprovador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprovador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Avaliacoes_de_Experiencia</relationshipName>
    <type>Lookup</type>
</CustomField>