force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Departamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>