force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/Avaliacao_Finalizada__c.field-meta.xml
<CustomField>
    <fullName>Avaliacao_Finalizada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que controla se a avaliação foi concluida e impede a edição da avalição</description>
    <label>Avaliação Finalizada</label>
    <type>Checkbox</type>
</CustomField>