force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/Cargo2__c.field-meta.xml
<CustomField>
    <fullName>Cargo2__c</fullName>
    <formula>Nome_do_Colaborador__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cargo</label>
    <type>Text</type>
</CustomField>