force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <label>Cargo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>