force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/Ciente__c.field-meta.xml
<CustomField>
    <fullName>Ciente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ciente</label>
    <type>Checkbox</type>
</CustomField>