force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/Data_de_Ciencia__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Ciencia__c</fullName>
    <label>Data de Ciência</label>
    <type>Date</type>
</CustomField>