force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/Data_Fim__c.field-meta.xml
<CustomField>
    <fullName>Data_Fim__c</fullName>
    <description>Data final da avaliação</description>
    <label>Data Fim</label>
    <type>Date</type>
</CustomField>