force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/Gestor2__c.field-meta.xml
<CustomField>
    <fullName>Gestor2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gestor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Avaliações de Experiencia (Gestor)</relationshipLabel>
    <relationshipName>Avalia_es_de_Experiencia</relationshipName>
    <type>Lookup</type>
</CustomField>