force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/Justificativa_1__c.field-meta.xml
<CustomField>
    <fullName>Justificativa_1__c</fullName>
    <label>Justificativa 1</label>
    <type>TextArea</type>
</CustomField>