force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/Justificativa_2__c.field-meta.xml
<CustomField>
    <fullName>Justificativa_2__c</fullName>
    <label>Justificativa 2</label>
    <type>TextArea</type>
</CustomField>