force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/Justificativa_3__c.field-meta.xml
<CustomField>
    <fullName>Justificativa_3__c</fullName>
    <label>Justificativa 3</label>
    <type>TextArea</type>
</CustomField>