force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/Nome_do_Colaborador__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Colaborador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome do Colaborador</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Avaliações de Experiencia</relationshipLabel>
    <relationshipName>AvaliacoesExperiencia</relationshipName>
    <type>Lookup</type>
</CustomField>