force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/NotificacaoDiasParaVencimento__c.field-meta.xml
<CustomField>
    <fullName>NotificacaoDiasParaVencimento__c</fullName>
    <formula>(Data_Fim__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notificação - Dias Para Vencimento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>