force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/NotificacaoNomeColaborador__c.field-meta.xml
<CustomField>
    <fullName>NotificacaoNomeColaborador__c</fullName>
    <formula>Nome_do_Colaborador__r.FirstName + &apos; &apos; + Nome_do_Colaborador__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notificação - Nome do Colaborador</label>
    <type>Text</type>
</CustomField>