force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/NotificacaoNomeGestor__c.field-meta.xml
<CustomField>
    <fullName>NotificacaoNomeGestor__c</fullName>
    <formula>Gestor2__r.FirstName + &apos; &apos; + Gestor2__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notificação - Nome do Gestor</label>
    <type>Text</type>
</CustomField>