force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/Pergunta_1__c.field-meta.xml
<CustomField>
    <fullName>Pergunta_1__c</fullName>
    <description>(Gestcom/Hospcom)
Valor: Atitude de Dono
Pegunta: Demonstrou proatividade, responsabilidade e comprometimento em relação ao seu trabalho?</description>
    <label>Pergunta 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AvaliacaoExperiencia</valueSetName>
    </valueSet>
</CustomField>