force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/Pergunta_2__c.field-meta.xml
<CustomField>
    <fullName>Pergunta_2__c</fullName>
    <description>(Gestcom/Hospcom)
Valor: Atitude de Dono
Pegunta: Procurou soluções e tomou iniciativas para resolver ou melhorar processos?</description>
    <label>Pergunta 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AvaliacaoExperiencia</valueSetName>
    </valueSet>
</CustomField>