force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/Pergunta_3__c.field-meta.xml
<CustomField>
    <fullName>Pergunta_3__c</fullName>
    <description>(Gestcom/Hospcom)
Valor: Melhoria Contínua
Pegunta: Demonstrou abertura e receptividade ao receber críticas ou sugestões de melhoria?</description>
    <label>Pergunta 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AvaliacaoExperiencia</valueSetName>
    </valueSet>
</CustomField>