force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/Periodo_da_Avaliacao__c.field-meta.xml
<CustomField>
    <fullName>Periodo_da_Avaliacao__c</fullName>
    <label>Período da Avaliação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1º Período (45 Dias)</fullName>
            </value>
            <value>
                <fullName>2º Período (90 Dias)</fullName>
            </value>
            <value>
                <fullName>1º Período</fullName>
                <isActive>false</isActive>
                <label>1º Período</label>
            </value>
            <value>
                <fullName>2º Período</fullName>
                <isActive>false</isActive>
                <label>2º Período</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>