force-app/main/default/objects/Avaliacao_de_Experiencia__c/fields/Status_do_Colaborador__c.field-meta.xml
<CustomField>
    <fullName>Status_do_Colaborador__c</fullName>
    <formula>IF(
    ISPICKVAL(Periodo_da_Avaliacao__c, &quot;1º Período (45 Dias)&quot;) &amp;&amp; ISPICKVAL(Aprovado__c, &quot;Sim&quot;),
    &quot;terá o contrato de experiêcia prorrogado&quot;,
    IF(
        ISPICKVAL(Periodo_da_Avaliacao__c, &quot;2º Período (90 Dias)&quot;) &amp;&amp; ISPICKVAL(Aprovado__c, &quot;Sim&quot;),
        &quot;será efetivado&quot;,
        IF(
            ISPICKVAL(Aprovado__c, &quot;Não&quot;),
            &quot;terá o contrato encerrado&quot;,
            &quot;&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status do Colaborador</label>
    <type>Text</type>
</CustomField>