force-app/main/default/objects/Avaliacao_de_Experiencia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nome_do_Colaborador__c</columns>
    <columns>Periodo_da_Avaliacao__c</columns>
    <columns>Status_da_Avalia_o__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>